[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Camera.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 320, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 176 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2, 176 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 320, 2 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 320, 2 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2, 180 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2, 180 )

[node name="Camera" type="Camera2D"]
anchor_mode = 0
current = true
script = ExtResource( 1 )

[node name="RoomBlocker" type="StaticBody2D" parent="."]
collision_layer = 0

[node name="CollisionTop" type="CollisionShape2D" parent="RoomBlocker"]
position = Vector2( 320, 0 )
shape = SubResource( 1 )

[node name="CollisionBottom" type="CollisionShape2D" parent="RoomBlocker"]
position = Vector2( 320, 352 )
shape = SubResource( 2 )

[node name="CollisionLeft" type="CollisionShape2D" parent="RoomBlocker"]
position = Vector2( 0, 176 )
shape = SubResource( 3 )

[node name="CollisionRight" type="CollisionShape2D" parent="RoomBlocker"]
position = Vector2( 640, 176 )
shape = SubResource( 4 )

[node name="RoomNavigation" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="NavigateUp" type="CollisionShape2D" parent="RoomNavigation"]
position = Vector2( 320, -16 )
shape = SubResource( 5 )

[node name="NavigateDown" type="CollisionShape2D" parent="RoomNavigation"]
position = Vector2( 320, 376 )
shape = SubResource( 6 )

[node name="NavigateLeft" type="CollisionShape2D" parent="RoomNavigation"]
position = Vector2( -16, 180 )
shape = SubResource( 7 )

[node name="NavigateRight" type="CollisionShape2D" parent="RoomNavigation"]
position = Vector2( 656, 180 )
shape = SubResource( 8 )

[connection signal="body_shape_entered" from="RoomNavigation" to="." method="_on_RoomNavigation_body_shape_entered"]
